# agent-bridge-mcp

./: .gitignore  .jscpd.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  autoresearch-dashboard.md  autoresearch-final-report.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  codex-mcp.example.json  package.json
.cursor/: mcp.json
crates/agent-bridge-mcp/: Cargo.toml
crates/agent-bridge-mcp/src/: AGENTS.md  claude_host.rs  claude_interactive.rs  config.rs  domain.rs  guidance.rs  lib.rs  mcp.rs  mcp_adapter.rs  provider.rs  router.rs  router_runtime.rs  runtime.rs  server.rs  task.rs  tools.rs
crates/agent-bridge-mcp/src/claude_interactive/: AGENTS.md  failure.rs  hooks.rs  pty.rs  runner.rs  setup.rs  terminal.rs  transcript.rs
crates/agent-bridge-mcp/src/server/: diagnostics.rs
crates/agent-bridge-mcp/src/task/: acp.rs  complete.rs  input.rs  registry.rs  review.rs  spawn.rs  supervision.rs
crates/agent-bridge-mcp/tests/: binary_panic.rs  claude_interactive_runner.rs  config_loader.rs  interactive_claude_fixtures.rs  mcp_adapter_protocol.rs  protocol_models.rs  provider_skill_guidance.rs  pty_adapter_spike.rs  repo_examples.rs  router_policy.rs  server_protocol.rs  stdio_binary.rs  terminal_probe_handler.rs
crates/agent-bridge-mcp/tests/fixtures/interactive_claude/: fake_interactive_claude.sh  terminal_probes.txt
crates/agent-bridge-mcp/tests/fixtures/interactive_claude/hooks/: session_start.json  stop.json  stop_failure_auth.json  stop_failure_billing.json  stop_failure_rate_limit.json  stop_failure_unknown.json
crates/agent-bridge-mcp/tests/fixtures/interactive_claude/setup_prompts/: login.txt  workspace_trust.txt
crates/agent-bridge-mcp/tests/fixtures/interactive_claude/transcripts/: malformed.jsonl  no_assistant.jsonl  success.jsonl
docs/: BUSINESS-CONTEXT.md  CREDENTIALS.md  DATA-MODEL.md  DEPLOYMENT.md  DOCUMENTATION.md  GETTING-STARTED.md  INDEX.md  INTEGRATIONS.md  RELEASE_NOTES.md  SECURITY.md  SETUP.md  refactor-complexity-tdd.md
experiments/: hypotheses.md  worklog.md
openspec/: config.yaml
scripts/: dogfood_compare.py  (+2 more)
(+343 files in other folders)
